--- a/sass/_buttons.scss
+++ b/sass/_buttons.scss
@@ -3,6 +3,7 @@
 /* NORMAL BUTTON TEXT */
 .button-text {
   font-size: 0.875rem;
+  white-space: nowrap;
 }
 
 /* REMOVES BORDER FROM TINY BUTTON CONTAINER*/
